Content update, responsive fix, font fix, text alignment

--- a/assets/css/streetr.css
+++ b/assets/css/streetr.css
@@ -1,5 +1,9 @@
 /* COLOR PALLETTE */
 
+html {
+    font-family: 'Roboto', sans-serif;
+}
+
 .color_pallette{
   color: #2196F3;
   color: #5DA1D6;
@@ -42,10 +46,6 @@
     margin-right: auto;
   }
 
-  .value-container{
-    height: 100vh;
-    overflow: hidden;
-  }
 
   .values .row{
     margin-bottom: 0;
@@ -82,6 +82,11 @@
     -ms-flex-align: center;
     align-items: center;
   }
+
+    .value-container{
+        height: 100vh;
+        overflow: hidden;
+    }
 
   .showcase .content{
     border-left: 2px solid #2196F3;
